--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,4 +1,4 @@
-.places {  
+.places__item {  
     border: 4px solid red;
     color: #fff;
     max-width: 984px;
@@ -9,7 +9,7 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
-    gap: 5px;
+    gap: 0;
     grid-auto-flow: row;
     grid-template-areas:
       "places-title places-website"
