--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,19 +1,16 @@
 .places__item {  
-    border: 4px solid red;
+    border: 4px solid rgb(0, 89, 255);
     color: #fff;
     max-width: 984px;
     margin: 92px auto;
     height: fit-content;
     align-items: stretch;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
     gap: 0;
     grid-auto-flow: row;
-    grid-template-areas:
-      "places-title places-website"
-      "places-image places-paragraph_top"
-      "places-image places-paragraph_bottom";
+    grid-template-areas: 
+      "places__title places__website"
+      "places__image places__description";
 }
  
