--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,13 +1,12 @@
-.places-title {
+.places__title {
     border: 1px solid #fff;
     margin: 0;
     width: 460px;
     font-size: 72px;
     font-weight: bold;
     line-height: 76px;
-    grid-area: places-title;
     width: fit-content;
     height: fit-content;
     justify-self: start;
-    align-self: end;
+    align-self: end;    
 }
