--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,13 +1,9 @@
 .photo-grid {
+    /* border: 1px solid red; */
     margin: 0 auto;
     max-width: 1184px;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 0.5em;
     justify-items: stretch;
-    grid-template-areas:
-        "photo-grid_item photo-grid_item photo-grid_item photo-grid_item"
-        "photo-grid_item photo-grid_item photo-grid_item photo-grid_item"
-        "photo-grid_item photo-grid_item photo-grid_item photo-grid_item"
-        "photo-grid_item photo-grid_item photo-grid_item photo-grid_item";
 }
