--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -6,9 +6,11 @@
     height: fit-content;
     align-items: stretch;
     display: grid;
+    /* grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr); */
     grid-auto-columns: 1fr;
     gap: 0;
-    grid-auto-flow: row;
+    /* grid-auto-flow: row; */
     grid-template-areas: 
       "places__title places__website"
       "places__image places__description";
