--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,7 +1,8 @@
 .places__title {
     border: 1px solid #fff;
-    margin: 0;
-    width: 460px;
+    margin: 0 auto 20px 0;
+    grid-area: places__title;
+    max-width: 460px;
     font-size: 72px;
     font-weight: bold;
     line-height: 76px;
