--- a/blocks/baikal/baikal.css
+++ b/blocks/baikal/baikal.css
@@ -1,6 +1,5 @@
 .baikal {
     min-width: 1280px;
     border: 5px solid #000;
-    /* box-sizing: border-box; */
-    /* padding-right: 0; */
+    text-align: center;
 }
