--- a/blocks/baikal/__image/baikal__image.css
+++ b/blocks/baikal/__image/baikal__image.css
@@ -1,5 +1,5 @@
 .baikal__image {
-    border: 1px solid #fff;
-    margin: 0 auto;
-    min-width: 1280px;
+    margin: 0;
+    opacity: .7;
+    width: 100%;
 }
