--- a/pages/index.css
+++ b/pages/index.css
@@ -43,5 +43,12 @@
 
 /* --------------Блок "Байкал"--------------- */
 @import url('../blocks/baikal/baikal.css');
+@import url('../blocks/baikal/__link/baikal__link.css');
 @import url('../blocks/baikal/_title/baikal__text_title.css');
 @import url('../blocks/baikal/_subtitle/baikal__text_subtitle.css');
+
+/* ----------------Подвал-------------- */
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__list/footer__list.css');
+@import url('../blocks/footer/__list/__item/footer__item.css');
+@import url('../blocks/footer/__list/__link/footer__link.css');
