--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,18 @@
 .header {
-    margin: 28px auto;
-    width: 1184px;
+    margin: 0 auto;
+    padding-top: 28px;
+    max-width: 1184px;
     display: flex;
-    position: relative;
+    flex-wrap: wrap;
+    position: relative; 
+}
+
+@media screen and (max-width: 1024px) {
+    .header {
+        margin: 28px auto;
+        border: 1px solid #000;
+        max-width: 928px;
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
