--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,14 @@
-html {
+.page {
+     margin: 0 auto;
      background-color: #2A2C2F;
      font-family: 'Inter', sans-serif;
+}
+
+@media screen and (max-width: 1024px){
+     .page {
+          margin: 0 auto;
+          width: 100%;
+          min-width: 1024px;
+     }
+
 }
