--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,10 @@
 .places {
     border: none;
 }
+
+@media screen and (max-width: 1024px) {
+    .places {
+        display: flex;
+        flex-wrap: wrap;
+    }    
+}
