--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,5 +1,6 @@
 .places__image { 
-    max-width: 460px;
+    min-width: 460px;
     max-height: 460px;
     grid-area: places__image;
+    margin: 0;
  }
