--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,4 +1,16 @@
 .footer__list {
     max-width: 1184px;
-    margin: 0;
+    min-height: 100%;
+    margin: 92px auto 24px;
+    padding: 0;
+}
+
+.footer__list:first-child {
+    padding: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .footer__list {
+        max-width: 928px;
+    }    
 }
