--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,7 +10,15 @@
 @media screen and (max-width: 1024px) {
     .header {
         padding: 28px auto;
-        border: 1px solid #000;
+        max-width: 928px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 28px auto;
         max-width: 928px;
         display: flex;
         flex-wrap: wrap;
