--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -10,5 +10,12 @@
           width: 100%;
           min-width: 1024px;
      }
+}
 
+@media screen and (max-width: 768px){
+     .page {
+          margin: 0 auto;
+          width: 100%;
+          min-width: 768px;
+     }
 }
