--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,3 +1,10 @@
 .photo-grid__item {
     border: none;
 }
+
+@media screen and (max-width: 1024px) {
+    .photo-grid__item {
+        width: 300px;
+        /* margin: 0; */
+    }
+}
