--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,15 +1,23 @@
 .places__item {  
-    color: #fff;
-    max-width: 984px;
-    margin: 92px auto;
-    height: fit-content;
-    align-items: stretch;
-    display: grid;
-    grid-auto-columns: 1fr;
-    /* gap: 0; */
-    row-gap: 0;
-    grid-template-areas: 
-      "places__title places__website"
-      "places__image places__description";
+  color: #fff;
+  max-width: 984px;
+  margin: 92px auto;
+  height: fit-content;
+  align-items: stretch;
+  display: grid;
+  grid-auto-columns: 1fr;
+  row-gap: 48px;
+  column-gap: 40px;
+  grid-template-areas: 
+    "places__title places__website"
+    "places__image places__description";
+}
+
+@media screen and (max-width: 1024px) {
+    .places__item {
+      flex-wrap: wrap;
+      row-gap: 48px;
+      column-gap: 32px;
+    }
 }
  
