--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,5 +1,6 @@
 .places__title {
-    margin: 0 auto 20px 0;
+    margin: 0;
+    padding: 0;
     grid-area: places__title;
     max-width: 460px;
     font-size: 72px;
@@ -8,5 +9,5 @@
     width: fit-content;
     height: fit-content;
     justify-self: start;
-    align-self: end;    
+    align-self: end;
 }
