--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,19 @@
     margin: 0;
     position: relative;
 }
+
+@media screen and (max-width: 1024px) {
+    .footer {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0;
+    }
+ }
