--- a/blocks/footer/__list/__item/footer__item.css
+++ b/blocks/footer/__list/__item/footer__item.css
@@ -15,3 +15,10 @@
 .footer__item:first-child {
     margin-left: 0;
 }
+
+@media screen and (max-width: 1024px) {
+    .footer__item {
+        border: 1px solid #000;
+        margin: 0;
+    }
+ }
