--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -12,5 +12,13 @@
 @media screen and (max-width: 1024px) {
     .footer__list {
         max-width: 928px;
-    }    
+        min-height: 100%;
+        border: 1px solid red;
+        /* margin: 92px auto 24px; */
+        padding: 0;
+    } 
+
+    .footer__list:first-child {
+        padding: 0;
+    }  
 }
