--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -5,6 +5,11 @@
 @media screen and (max-width: 1024px) {
     .photo-grid__item {
         width: 300px;
-        /* margin: 0; */
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .photo-grid__item {
+        width: 352px;
     }
 }
