--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,6 +1,15 @@
 .places__image { 
-    min-width: 460px;
-    max-height: 460px;
+    width: 460px;
+    height: 460px;
     grid-area: places__image;
     margin: 0;
+ }
+
+ @media screen and (max-width: 768px) {
+    .places__image {
+        width: 340;
+        height: 340;
+        grid-area: places__image;
+        margin: 0;
+    }
  }
