--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -10,3 +10,9 @@
 .places__paragraph:first-child {
    margin-bottom: 40px;
 }
+
+@media screen and (max-width: 768px) {
+   .places__paragraph {
+      font-size: 16px;
+   }    
+}
