--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -11,3 +11,14 @@
     justify-self: start;
     align-self: end;
 }
+
+@media screen and (max-width: 768px) {
+    .places__title {
+        border: 1px solid #000;
+        margin: 0;
+        padding: 0;
+        font-size: 42px;
+        line-height: 46px;
+        max-width: 340px;
+    }
+}
