--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -10,3 +10,13 @@
         margin: 0 auto;
     }    
 }
+
+@media screen and (max-width: 768px) {
+    .places {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 720px;
+        margin: 0 auto;
+        border: 1px solid #000;
+    }    
+}
