--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,6 +1,6 @@
 .footer__list {
-    max-width: 1184px;
-    min-height: 100%;
+    min-width: 1184px;
+    max-height: 100%;
     margin: 92px auto 24px;
     padding: 0;
 }
@@ -11,10 +11,9 @@
 
 @media screen and (max-width: 1024px) {
     .footer__list {
-        max-width: 928px;
-        min-height: 100%;
-        border: 1px solid red;
-        /* margin: 92px auto 24px; */
+        min-width: 928px;
+        max-height: 100%;
+        margin: 92px auto 24px;
         padding: 0;
     } 
 
