--- a/blocks/footer/__list/__item/footer__item.css
+++ b/blocks/footer/__list/__item/footer__item.css
@@ -1,23 +1,24 @@
 .footer__item {
-    margin: 0 18px;
+    margin-right: 18px;
     display: inline-block;
     list-style: none;   
     color: #fff;
-}
-
-.footer__item:last-child {
-    float: right;
-    margin: 0;
-    padding: 0;
-
 }
 
 .footer__item:first-child {
     margin-left: 0;
 }
 
+.footer__item:last-child {
+    float: right;
+    margin: 0;
+    padding: 0;
+}
+
+
 @media screen and (max-width: 1024px) {
-    .footer__item {
-        margin: 0;
+    .footer__item:last-child {
+        border: 1px solid red;
+        float: right;
     }
  }
