--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,23 +1,14 @@
 .footer__list {
-    min-width: 1184px;
-    max-height: 100%;
-    margin: 92px auto 24px;
-    padding: 0;
-}
-
-.footer__list:first-child {
-    padding: 0;
+    max-width: 1184px;
+    margin: 0 auto;
 }
 
 @media screen and (max-width: 1024px) {
     .footer__list {
-        min-width: 928px;
-        max-height: 100%;
-        margin: 92px auto 24px;
+        border: 1px solid #000;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 928px;
         padding: 0;
     } 
-
-    .footer__list:first-child {
-        padding: 0;
-    }  
 }
