--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,10 @@
 .photo-grid {
-    /* border: 1px solid red; */
     margin: 0 auto;
     max-width: 1184px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
+    /* flex-wrap: wrap; */
     justify-items: stretch;
 }
 
@@ -15,7 +15,7 @@
         gap: 14px;
         flex-wrap: wrap;
         margin: 0 auto;
-        justify-content: space-between;
+        /* justify-content: space-between; */
     }
 }
 
@@ -26,6 +26,5 @@
         gap: 16px;
         flex-wrap: wrap;
         margin: 0 auto;
-        /* justify-content: space-between; */
     }
 }
