--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -14,11 +14,10 @@
 
 @media screen and (max-width: 768px) {
     .places__title {
-        border: 1px solid #000;
-        margin: 0;
-        padding: 0;
+        border: 1px solid red;
         font-size: 42px;
         line-height: 46px;
         max-width: 340px;
+        min-height: 92px;
     }
 }
