--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,4 +2,12 @@
     font-size: 16px;
     line-height: 26.08px;
     font-weight: 400;
+    margin: 0 0 33px 0;
 }
+
+/* @media screen and (max-width: 768px) {
+    .intro__text {
+        border: 1px solid #000;
+    }
+    
+} */
