--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,6 +2,7 @@
     text-transform: uppercase;
     color: #fff;
     font-size: 10px;
+    letter-spacing: 1.5px;
     line-height: 14px;
     margin: 8px auto 0 24px;
 }
