--- a/blocks/places/__description/places__description.css
+++ b/blocks/places/__description/places__description.css
@@ -2,3 +2,9 @@
     grid-area: places__description;
     margin: 0;
 }
+
+@media screen and (max-width: 768px) {
+    .places__description {
+        max-width: 352px;
+    } 
+}
