--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 768px) {
   .places__item {
-    /* flex-wrap: wrap; */
+    max-width: 720px;
     row-gap: 48px;
     column-gap: 28px;
     border: 1px solid #000;
