--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -17,7 +17,8 @@
         border: 1px solid red;
         font-size: 42px;
         line-height: 46px;
-        max-width: 340px;
-        min-height: 92px;
+        font-weight: 900;
+        width: 340px;
+        height: 92px;
     }
 }
