--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,7 +1,8 @@
 .places__item {  
   color: #fff;
   max-width: 984px;
-  margin: 92px auto;
+  margin: 92px;
+  justify-content: center;
   height: fit-content;
   align-items: stretch;
   display: grid;
@@ -11,6 +12,10 @@
   grid-template-areas: 
     "places__title places__website"
     "places__image places__description";
+}
+
+.places__item:last-child {
+  margin-bottom: 92px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -27,6 +32,11 @@
     row-gap: 48px;
     column-gap: 28px;
     border: 1px solid #000;
+    margin-top: 88px;
+  }
+
+  .places__item:last-child {
+    margin-bottom: 88px;
   }
 }
  
