--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,15 +1,3 @@
 .photo-grid__item {
-    border: none;
-}
-
-@media screen and (max-width: 1024px) {
-    .photo-grid__item {
-        width: 300px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .photo-grid__item {
-        width: 352px;
-    }
+    width: 100%;
 }
