--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,7 +1,7 @@
 .places__item {  
   color: #fff;
   max-width: 984px;
-  margin: 92px;
+  margin: 92px 0;
   justify-content: center;
   height: fit-content;
   align-items: stretch;
@@ -20,7 +20,6 @@
 
 @media screen and (max-width: 1024px) {
     .places__item {
-      flex-wrap: wrap;
       row-gap: 48px;
       column-gap: 32px;
     }
@@ -29,10 +28,8 @@
 @media screen and (max-width: 768px) {
   .places__item {
     max-width: 720px;
-    row-gap: 48px;
     column-gap: 28px;
-    border: 1px solid #000;
-    margin-top: 88px;
+    margin: 88px 0;
   }
 
   .places__item:last-child {
