--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,3 +1,9 @@
+@supports (font-variation-settings: normal) {
+    .page { 
+         font-family: 'Inter var', sans-serif; 
+     }
+  }
+
 .page {
      margin: 0 auto;
      background-color: #2A2C2F;
