--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -13,6 +13,11 @@
 
 @media screen and (max-width: 768px) {
    .places__paragraph {
-      font-size: 16px;
+    line-height: 26.08px;
+    font-size: 16px;
    }    
+
+   .places__paragraph:first-child {
+      margin-bottom: 25px;
+   }
 }
