--- a/blocks/baikal/_title/baikal__text_title.css
+++ b/blocks/baikal/_title/baikal__text_title.css
@@ -1,6 +1,6 @@
 .baikal__title {
     font-size: 72px;
-    font-weight: bold;
+    font-weight: 900;
     text-align: center;
     max-width: 560px;
     margin: 0 auto;
