--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,11 +8,20 @@
 @media screen and (max-width: 1024px) {
     .header {
         max-width: 928px;
+        
     }
 }
 
 @media screen and (max-width: 768px) {
     .header {
         max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header {
+        border: 1px solid #000;
+        width: 100%;
+        padding-top: 16px;
     }
 }
