--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,9 +5,12 @@
     margin: 0 0 33px 0;
 }
 
-/* @media screen and (max-width: 768px) {
+@media screen and (max-width: 320px) {
     .intro__text {
-        border: 1px solid #000;
+        border: 1px solid rgb(255, 0, 0);
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26.08px;
     }
     
-} */
+}
