--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,3 +6,9 @@
     line-height: 14px;
     margin: 8px auto 0 24px;
 }
+
+@media screen and (max-width: 320px) {
+    .lead__caption {
+        margin: 8px auto 0 16px;
+    }
+}
