--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -17,9 +17,16 @@
 
 @media screen and (max-width: 768px) {
     .lead {
-        max-width: 928px;
+        width: 100%;
         margin: 48px auto;
         justify-content: center;
     }
-    
+}
+
+@media screen and (max-width: 320px) {
+    .lead {
+        width: 100%;
+        margin: 48px auto;
+        justify-content: center;
+    }
 }
