--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -21,3 +21,10 @@
         max-width: 720px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .photo-grid {
+        grid-template-columns: repeat(1, 1fr);
+        max-width: 720px;
+    }
+}
