--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,10 +5,6 @@
 
 @media screen and (max-width: 320px) {
     .header__logo {
-        margin: 0;
-        border: 1px solid red;
-        width: 142px;
-        height: 42px;
+        max-width: 142px;
     }
-    
 }
