--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,27 +1,20 @@
 .header {
     margin: 0 auto;
-    padding-top: 28px;
+    padding: 28px 48px 0;
     max-width: 1184px;
-    position: relative; 
-}
-
-@media screen and (max-width: 1024px) {
-    .header {
-        max-width: 928px;
-        
-    }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 @media screen and (max-width: 768px) {
     .header {
-        max-width: 720px;
-    }
+        padding: 28px 24px 0;
+    }    
 }
 
 @media screen and (max-width: 320px) {
     .header {
-        border: 1px solid #000;
-        width: 100%;
-        padding-top: 16px;
-    }
+        padding: 16px 16px 0;
+    }    
 }
