--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,11 +1,13 @@
 .intro {
     max-width: 690px;
+    border: 1px solid #000;
     justify-content: center;
-    margin: 0 auto 92px 0;
+    margin: 0 auto;
     color: #fff;
+    /* padding: 92px; */
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
     .intro {
         max-width: 690px;
     }
@@ -20,9 +22,9 @@
 
 @media screen and (max-width: 320px) {
     .intro {
-        /* margin: 24px; */
+        margin: 24px;
         border: 1px solid #000;
         width: 100%;
         
     }
-}
+} */
