--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,19 +1,22 @@
 .lead__image {
     margin: 0 auto;
+    width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
     .lead__image {
-        max-width: 928px;
-        display: flex;
-        flex-wrap: wrap;
+        width: 100%;
     }  
 }
 
 @media screen and (max-width: 768px) {
     .lead__image {
-        max-width: 768px;
-        display: flex;
-        flex-wrap: wrap;
+        width: 100%;
+    }  
+}
+
+@media screen and (max-width: 320px) {
+    .lead__image {
+        width: 100%;
     }  
 }
