--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,29 @@
 .lead__subtitle {
+    /* border: 3px solid green; */
     color: #fff;
     font-size: 30px;
-    width: 640px;
+    max-width: 640px;
+    font-weight: 400;
+    /* width: 100%; */
     margin: 32px auto 64px;
     text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .lead__subtitle {
+
+        width: 100%;
+    }    
+}
+
+@media screen and (max-width: 768px) {
+    .lead__subtitle {
+        width: 100%;
+    }    
+}
+
+@media screen and (max-width: 320px) {
+    .lead__subtitle {
+        width: 100%;
+    }    
 }
