--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,21 +1,24 @@
 .lead {
-    margin: 0 auto;
+    border: 1px solid red;
+    margin: 56px auto;
     padding: 56px auto 96px;
     max-width: 984px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+    flex-wrap: wrap;
+    /* word-wrap:normal; */
 }
 
 @media screen and (max-width: 1024px) {
     .lead {
         max-width: 928px;
         margin: 48px auto;
-        justify-content: center;
+        /* justify-content: center; */
     }
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
     .lead {
         width: 100%;
         margin: 48px auto;
@@ -29,4 +32,4 @@
         margin: 48px auto;
         justify-content: center;
     }
-}
+} */
