--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,13 +1,12 @@
 .photo-grid {
-    margin: 0 auto;
-    max-width: 1184px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
-    justify-items: stretch;
+    margin: 92px auto;
+    max-width: 1184px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
     .photo-grid {
         grid-template-columns: repeat(3, 1fr);
         max-width: 928px;
@@ -15,7 +14,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .photo-grid {
         grid-template-columns: repeat(2, 1fr);
         max-width: 720px;
@@ -25,6 +24,5 @@
 @media screen and (max-width: 320px) {
     .photo-grid {
         grid-template-columns: repeat(1, 1fr);
-        max-width: 720px;
     }
 }
