--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,28 @@
 .intro__list {
-    padding: 0;
     font-size: 12px;
     line-height: 18px;
     font-weight: 400;
+    justify-content: end;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .intro__list {
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 18px;
+        max-width: 288px;
+        padding: 0;
+    }    
+}
+
+@media screen and (max-width: 767px) {
+    .intro__list {
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 18px;
+        padding: 0;
+        margin: 0;
+    }    
 }
