--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,16 +1,16 @@
 .intro__text {
+    max-width: 720px;
     font-size: 16px;
     line-height: 26.08px;
     font-weight: 400;
-    margin: 0 0 33px 0;
+    padding: 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .intro__text {
-        border: 1px solid rgb(255, 0, 0);
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 26.08px;
+        max-width: 720px;
+        padding: 0;
     }
-    
 }
+
+
