--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,12 +1,25 @@
 .intro__title {
-    margin-bottom: 40px;
     font-size: 54px;
     line-height: 58px;
     font-weight: 900;
+    min-width: 288px;
+    padding: 0;
+    margin: 0;
 }
 
-@media screen and (max-width) {
+@media screen and (max-width: 1023px) {
     .intro__title {
+        max-width: 720px;
         margin: 0;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .intro__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
+
+
