--- a/blocks/lead/__image-block/__caption/lead__caption.css
+++ b/blocks/lead/__image-block/__caption/lead__caption.css
@@ -7,8 +7,11 @@
     margin: 8px auto 0 24px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .lead__caption {
         margin: 8px auto 0 16px;
+        font-size: 10px;
+        line-height: 14px;
+        
     }
 }
