--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,4 @@
 .lead {
-    border: 1px solid red;
     margin: 56px auto;
     padding: 56px auto 96px;
     max-width: 984px;
@@ -7,29 +6,13 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
-    /* word-wrap:normal; */
+    word-wrap:normal;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 767px) {
     .lead {
         max-width: 928px;
         margin: 48px auto;
-        /* justify-content: center; */
     }
 }
 
-/* @media screen and (max-width: 768px) {
-    .lead {
-        width: 100%;
-        margin: 48px auto;
-        justify-content: center;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .lead {
-        width: 100%;
-        margin: 48px auto;
-        justify-content: center;
-    }
-} */
