--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -30,19 +30,5 @@
      background-color: #2A2C2F;
      font-family: 'Inter' , sans-serif;
      text-rendering: optimizeLegibility;
-     max-width: 1280px;
-}
-
-@media screen and (max-width: 1024px){
-     .page {
-          max-width: 1024px;
-     }
-}
-
-@media screen and (max-width: 768px){
-     .page {
-          margin: 0 auto;
-          width: 100%;
-          max-width: 768px;
-     }
+     min-width: 320px;
 }
