--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,7 +1,9 @@
 .places__image { 
-    width: 460px;
-    height: 460px;
+    max-width: 460px;
+    max-height: 460px;
     grid-area: places__image;
+    width: fit-content;
+    height: fit-content;
     margin: 0;
  }
 
