--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,8 +1,9 @@
 .places__item {  
+  border: 1px solid red;
   color: #fff;
   max-width: 984px;
   margin: 92px 0;
-  justify-content: center;
+  justify-content: start;
   height: fit-content;
   align-items: stretch;
   display: grid;
@@ -18,14 +19,7 @@
   margin-bottom: 92px;
 }
 
-@media screen and (max-width: 1024px) {
-    .places__item {
-      row-gap: 48px;
-      column-gap: 32px;
-    }
-}
-
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 1024px) {
   .places__item {
     max-width: 720px;
     column-gap: 28px;
@@ -35,5 +29,17 @@
   .places__item:last-child {
     margin-bottom: 88px;
   }
+} */
+
+@media screen and (max-width: 768px) {
+  /* .places__item {
+    max-width: 720px;
+    column-gap: 28px;
+    margin: 88px 0;
+  }
+
+  .places__item:last-child {
+    margin-bottom: 88px;
+  } */
 }
  
