--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -6,8 +6,8 @@
     font-size: 72px;
     font-weight: 900;
     line-height: 76px;
-    width: fit-content;
-    height: fit-content;
+    /* width: fit-content;
+    height: fit-content; */
     justify-self: start;
     align-self: end;
 }
