--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,6 +1,7 @@
 .places__image { 
+    /* max-width: 460px; */
     width: 100%;
-    grid-area: places__image;
+    /* grid-area: places__image; */
     width: fit-content;
     height: fit-content;
     margin: 0;
@@ -8,7 +9,7 @@
 
 @media screen and (max-width: 768px) {
     .places__image {
-        max-width: 340px;
+        /* max-width: 340px; */
         width: 100%;
         /* max-height: 340px; */
     }
