--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -2,21 +2,29 @@
     margin: 0;
     padding: 0;
     grid-area: places__title;
-    max-width: 460px;
+    width: 100%;
     font-size: 72px;
     font-weight: 900;
     line-height: 76px;
-    /* width: fit-content;
-    height: fit-content; */
     justify-self: start;
     align-self: end;
 }
 
 @media screen and (max-width: 768px) {
     .places__title {
-        max-width: 340px;
+        width: 100%;
         font-size: 42px;
         line-height: 46px;
         font-weight: 900;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places__title {
+        font-size: 32px;
+        line-height: 35px;
+        font-weight: 900;
+        align-self: center;
+        width: 100%;
     }
 }
