--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -3,8 +3,7 @@
    grid-area: places__website;
    text-decoration: none;
    color: #fff;
-   width: fit-content;
-   height: fit-content;
+   width: 100%;
    justify-self: start;
    align-self: end;
  }
@@ -13,7 +12,9 @@
    text-decoration: underline;
  }
 
- /* @media screen and (max-width: 320px) {
-       .places__website {
-       }
- } */
+ @media screen and (max-width: 320px) {
+    .places__website {
+      align-self: flex-start;
+      width: 100%;
+    }
+ }
