--- a/blocks/baikal/__link/baikal__link.css
+++ b/blocks/baikal/__link/baikal__link.css
@@ -11,10 +11,10 @@
     justify-content: center;
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1023px) {
     .baikal__link {
         margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
     }
-}
+} */
