--- a/blocks/baikal/_subtitle/baikal__text_subtitle.css
+++ b/blocks/baikal/_subtitle/baikal__text_subtitle.css
@@ -6,3 +6,10 @@
     font-weight: 400;
     line-height: 22px;
 }
+
+@media screen and (max-width: 320px) {
+    .baikal__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
