--- a/blocks/baikal/baikal.css
+++ b/blocks/baikal/baikal.css
@@ -5,11 +5,14 @@
     min-height: 740px;
     margin: 0 auto;
     position: relative;
-    z-index: 1;
+    z-index: 1; 
+    object-fit: cover;     
+    display: flex;
 }
 
 .baikal::before {
     content: "";
+    object-fit: cover;     
     display: block;
     position: absolute;
     top: 0;
@@ -24,10 +27,9 @@
     background-color: rgba(0, 0, 0, .7);
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 320px) {
     .baikal {
-        display: flex;
-        flex-wrap: wrap;
+        max-width: 100%;
+        height: auto;
     }
-    
 }
