--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,7 +1,6 @@
 .footer__list {
     max-width: 1184px;
     margin: 0 auto;
-    width: 100%;
 }
 
 .footer__list:last-child {
@@ -10,10 +9,19 @@
 
 @media screen and (max-width: 1023px) {
     .footer__list {
-        border: 1px solid #000;
         display: flex;
-        /* max-width: 928px; */
+        max-width: 928px;
+        padding: 0;
+    } 
+}
+
+@media screen and (max-width: 767px) {
+    .footer__list {
+        display: flex;
+        flex-direction: column;
         width: 100%;
         padding: 0;
+        font-size: 14px;
+        line-height: 24px;
     } 
 }
