--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,26 +1,14 @@
 .footer__list {
     max-width: 1184px;
     margin: 0 auto;
+    display: inline-block;
 }
 
-.footer__list:last-child {
-    align-self: end;
-}
-
-@media screen and (max-width: 1023px) {
-    .footer__list {
-        display: flex;
-        max-width: 928px;
-        padding: 0;
-    } 
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) {
     .footer__list {
         display: flex;
         flex-direction: column;
         width: 100%;
-        padding: 0;
         font-size: 14px;
         line-height: 24px;
     } 
