--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 .footer {
-    margin: 0;
-    padding: 92px 0 24px;
+    margin: 0 auto;
     position: relative;
-    width: 100%;
+    max-width: 1184px;
+    display: flex;
+    flex-direction: row;
 }
