--- a/blocks/places/__description/places__description.css
+++ b/blocks/places/__description/places__description.css
@@ -1,6 +1,13 @@
 .places__description {
+    border: 1px solid red;
     grid-area: places__description;
     margin: 0;
+    padding: 0;
     width: 100%;
-    word-break: break-all;
+}
+
+@media screen and (max-width: 767px) {
+    .places__description {
+        width: 100%;
+    }
 }
