--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,23 +1,4 @@
-.places__image { 
-    /* max-width: 460px; */
+.places__image {
+    grid-area: places__image;
     width: 100%;
-    /* grid-area: places__image; */
-    width: fit-content;
-    height: fit-content;
-    margin: 0;
- }
-
-@media screen and (max-width: 768px) {
-    .places__image {
-        /* max-width: 340px; */
-        width: 100%;
-        /* max-height: 340px; */
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .places__image {
-        width: 100%;
-        /* margin: 0; */
-    }
 }
