--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,30 +1,21 @@
 .places__title {
+    border: 1px solid DarkCyan;
     margin: 0;
-    padding: 0;
+    max-width: 460px;
     grid-area: places__title;
-    width: 100%;
-    font-size: 72px;
-    font-weight: 900;
-    line-height: 76px;
-    justify-self: start;
-    align-self: end;
-}
+    font: normal 900 72px/76px 'Inter';
+} 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .places__title {
-        width: 100%;
-        font-size: 42px;
-        line-height: 46px;
-        font-weight: 900;
+        font: normal 900 42px/46px 'Inter';
     }
 }
 
 @media screen and (max-width: 320px) {
     .places__title {
-        font-size: 32px;
-        line-height: 35px;
-        font-weight: 900;
-        align-self: center;
-        width: 100%;
+        font: normal 900 32px/35px 'Inter';
+        max-width: 288px;
+        margin: 0 auto;
     }
 }
