--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -2,3 +2,10 @@
     grid-area: places__image;
     width: 100%;
 }
+
+@media screen and (max-width: 767px){
+    .places__image {
+        /* max-width: 320px; */
+        width: 100%;
+    }    
+}
