--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,7 +1,8 @@
 .places__item {
   color: #fff;
+  margin-bottom: 80px;
   width: 100%;
-  border: 1px solid SpringGreen;
+  /* border: 1px solid SpringGreen; */
   display: grid;
   gap: 48px 40px;
   grid-template-areas: 
@@ -12,7 +13,6 @@
 @media screen and (max-width: 1023px) {
   .places__item {
     padding: auto 20px;
-    margin: 0;
     gap: 48px 28px;
     width: 100%;
   }
@@ -24,5 +24,8 @@
       'places__title' 'places__website-block'
       'places__image' 'places__description';
     width: 100%;
+    gap: 32px 0;
+    padding: 0 24px;
+    margin: 0;
   }
 }
