--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,21 +1,21 @@
 .places__title {
-    border: 1px solid DarkCyan;
+    /* border: 1px solid DarkCyan; */
     margin: 0;
     max-width: 460px;
     grid-area: places__title;
     font: normal 900 72px/76px 'Inter';
 } 
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1023px) {
     .places__title {
         font: normal 900 42px/46px 'Inter';
+        margin: 0;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .places__title {
         font: normal 900 32px/35px 'Inter';
-        max-width: 288px;
         margin: 0 auto;
     }
 }
