--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,5 @@
 .places {
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     max-width: 984px;
     margin: 0 auto;
     padding: 92px 148px;
