--- a/blocks/places/__website-block/places__website-block.css
+++ b/blocks/places/__website-block/places__website-block.css
@@ -1,5 +1,5 @@
 .places__website-block {
-    border: 1px solid Tomato;
+    /* border: 1px solid Tomato; */
     width: 100%;
     grid-area: places__website-block;
     margin: 0;
@@ -11,6 +11,14 @@
 @media screen and (max-width: 767px) {
     .places__website-block {
         width: 100%;
+        padding: 0;
     }
-    
 }
+
+/* @media screen and (max-width: 320px) {
+    .places__website-block {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+} */
