--- a/blocks/places/__description/places__description.css
+++ b/blocks/places/__description/places__description.css
@@ -3,14 +3,21 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    /* border: 1px solid red; */
     font: normal 400 18px/29.34px 'Inter';
 }
  
 @media screen and (max-width: 767px) {
     .places__description {
         padding: 0;
-        width: 100%;
         font: normal 400 16px/26.08px 'Inter';
+    }   
+}
+
+@media screen and (max-width: 320px) {
+    .places__description {
+        padding: 0;
+        font: normal 400 16px/26.08px 'Inter';
+        margin: 0 auto;
+        max-width: 288px;
     }   
 }
