--- a/blocks/places/__website-block/places__website-block.css
+++ b/blocks/places/__website-block/places__website-block.css
@@ -1,5 +1,4 @@
 .places__website-block {
-    /* border: 1px solid Tomato; */
     width: 100%;
     grid-area: places__website-block;
     margin: 0;
@@ -10,15 +9,8 @@
 
 @media screen and (max-width: 767px) {
     .places__website-block {
-        width: 100%;
-        padding: 0;
+        max-width: 288px;
+        padding: 0 16px;
+        margin: 0;
     }
 }
-
-/* @media screen and (max-width: 320px) {
-    .places__website-block {
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
-} */
