--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,4 @@
 .places {
-    /* border: 1px solid #000; */
     max-width: 984px;
     margin: 0 auto;
     padding: 92px 148px;
@@ -13,14 +12,15 @@
 
 @media screen and (max-width: 767px) {
     .places {
-      padding: 88px 24px;
-      margin: 0 auto;
+        padding: 0;
+        margin: 0;
     }
 }
 
 @media screen and (max-width: 320px) {
     .places {
-      max-width: 100%;
-      padding: 64px 0;
+        max-width: 100%;
+        padding: 0;
+
     }
 }
