--- a/blocks/baikal/__link/baikal__link.css
+++ b/blocks/baikal/__link/baikal__link.css
@@ -1,4 +1,5 @@
 .baikal__link {
+    display: flex;
     color: #fff;
     text-decoration: none;
     position: absolute;
@@ -6,9 +7,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    z-index: 1;
 }
 
 /* @media screen and (max-width: 1023px) {
