--- a/blocks/baikal/__text-block/_title/baikal__text-block_title.css
+++ b/blocks/baikal/__text-block/_title/baikal__text-block_title.css
@@ -1,4 +1,4 @@
-.baikal__title {
+.baikal__text-block_title {
     font-size: 72px;
     font-weight: 900;
     text-align: center;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .baikal__title {
+    .baikal__text-block_title {
         font-size: 32px;
         line-height: 35px;
     }
