--- a/blocks/baikal/baikal.css
+++ b/blocks/baikal/baikal.css
@@ -1,13 +1,16 @@
 .baikal {
-    background: url('../../images/cover-trains.jpg') no-repeat center / cover;
+    display: block;
+    padding: 0;
+    object-fit: contain;
+    background-repeat: no-repeat;
     color: #fff;
+    align-items: center;
     max-width: 1184px;
     min-height: 740px;
     margin: 0 auto;
     position: relative;
     z-index: 1;
-    object-fit: cover;
-    display: flex;
+    border: 3px solid red;
 }
 
 .baikal::before {
@@ -29,7 +32,8 @@
 
 @media screen and (max-width: 320px) {
     .baikal {
-        max-width: 100%;
-        height: auto;
+        width: 100%;
+        border: 1px solid green;
+        height: 100%;
     }
 }
