--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -5,3 +5,9 @@
 .places__paragraph:last-child {
    margin-top: 26px;
 }
+
+@media screen and (max-width: 320px) {
+   .places__paragraph {
+      padding: auto 16px;
+   }
+}
