--- a/blocks/baikal/__link/baikal__link.css
+++ b/blocks/baikal/__link/baikal__link.css
@@ -1,22 +1,26 @@
 .baikal__link {
-    display: flex;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     color: #fff;
     text-decoration: none;
+}
+
+.baikal__link::before {
+    content: "";
+    object-fit: cover;
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     height: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .3);
+    z-index: 2;
 }
 
-/* @media screen and (max-width: 1023px) {
-    .baikal__link {
-        margin: 0 auto;
-        display: flex;
-        flex-wrap: wrap;
-    }
-} */
+.baikal__link:hover::before {
+    background-color: rgba(0, 0, 0, .7);
+}
