--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -2,12 +2,16 @@
    margin: 0;
 }
 
-.places__paragraph:last-child {
-   margin-top: 26px;
+@media screen and (max-width: 767px) {
+   .places__paragraph {
+      margin: 0;
+      padding: 25px 16px 0;
+   }
 }
 
 @media screen and (max-width: 320px) {
    .places__paragraph {
-      padding: auto 16px;
+      padding: 0;
+      border: 1px solid #000;
    }
 }
