--- a/pages/index.css
+++ b/pages/index.css
@@ -50,5 +50,7 @@
 
 /* ----------------Подвал-------------- */
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__list/footer__list.css');
 @import url('../blocks/footer/__list/__item/footer__item.css');
 @import url('../blocks/footer/__list/__link/footer__link.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
