--- a/blocks/baikal/__text-block/_subtitle/baikal__text-block_subtitle.css
+++ b/blocks/baikal/__text-block/_subtitle/baikal__text-block_subtitle.css
@@ -11,5 +11,7 @@
     .baikal__text-block_subtitle {
         font-size: 14px;
         line-height: 16px;
+        margin: 0;
+        padding-top: 16px;
     }
 }
