--- a/blocks/footer/__list/__item/footer__item.css
+++ b/blocks/footer/__list/__item/footer__item.css
@@ -1,8 +1,11 @@
 .footer__item {
-    margin-right: 18px;
-    display: inline-block;
     list-style: none;
     color: #fff;
+    margin-right: 18px;
 }
 
-
+@media screen and (max-width: 320px) {
+    .footer__item {
+        margin: 0 0 32px;
+    }
+}
