--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,15 +1,16 @@
 .footer__list {
-    max-width: 1184px;
-    margin: 0 auto;
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
 }
 
 @media screen and (max-width: 320px) {
     .footer__list {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 24px;
         display: flex;
         flex-direction: column;
-        width: 100%;
-        font-size: 14px;
-        line-height: 24px;
-    } 
+    }
 }
